Fixed index item spacing and search bars

--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -22,9 +22,9 @@
   margin: 2% 0% 0% 40%;
 }
 
-.home-index{
+.home-index {
   box-sizing: border-box;
-  margin: 0 16%;
+  margin: 0 16.6%;
   padding-top: 1%;
   background-color: #f1f1f1;
 }
